Removed update date from archive files. Converted global icon from sup to span to fix float spacing.

--- a/data/viz/site/aoc.css
+++ b/data/viz/site/aoc.css
@@ -27,7 +27,7 @@ body {
 }
 .daily {
 	float: left;
-	min-width: 350px;
+	min-width: 375px;
 }
 .details {
 	display: none;
